Bug 518835 - "On Attach" checkbox is trimmed in RTL UI
Summary: "On Attach" checkbox is trimmed in RTL UI
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 6.6.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: rtl
Depends on:
Blocks:
 
Reported: 2026-04-11 18:56 UTC by Yaron Shahrabani
Modified: 2026-06-04 11:24 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments
The left column is "On Attach" below is the trimmed checkbox marked with an arrow. (31.12 KB, image/png)
2026-04-11 18:56 UTC, Yaron Shahrabani
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yaron Shahrabani 2026-04-11 18:56:12 UTC
Created attachment 191452 [details]
The left column is "On Attach" below is the trimmed checkbox marked with an arrow.

SUMMARY
There is some RTL glitch with the checkbox in the "On Attach" column (To the left in the screenshot)

STEPS TO REPRODUCE
1. In an RTL translated system go to System Settings
2. Devices and Cameras
3. Automount devices

OBSERVED RESULT
The checkbox is slightly off

EXPECTED RESULT
It should appear comהכניסהpletely

SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2026-64-66
KDE Plasma Version: 6.6.86
KDE Frameworks Version: 6.26.6
Qt Version: 6.11.0
Kernel Version: 6.19.11-zen1-1-zen (64-bit)
Graphics Platform: wayland
Processors: 4 x Intel® Core™ i7-16510U CPU @ 1.8@GHz
Memory: 2 GiB of RAM (1.8 GiB usable)
Graphics Processor: Ulvmpipe
Manufacturer: QEMU
Product Name: Standard PC (Q35 + ICH9, 2609)
System Version: pc-q35-10.2

ADDITIONAL INFORMATION
Comment 1 Akseli Lahtinen 2026-06-04 09:33:59 UTC
Can confirm, likely same issue as https://bugs.kde.org/show_bug.cgi?id=518837

Operating System: KDE Linux 2026-06-03
KDE Plasma Version: 6.7.80
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 2 Bug Janitor Service 2026-06-04 10:48:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/621
Comment 3 Akseli Lahtinen 2026-06-04 10:59:23 UTC
Git commit 0670226aed20aa19e9bddf95585cafeea7cc15cd by Akseli Lahtinen.
Committed on 04/06/2026 at 10:46.
Pushed by akselmo into branch 'master'.

BreezeStyle: Fix ViewItemDecoration/Indicator adjustment on RTL style

We were errorneously moving the rectangle to the left when
adjusting right side of it.

Instead move it to the right so we get the adjustment correctly.
Related: bug 518837
FIXED-IN: 6.7.0

M  +1    -1    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/-/commit/0670226aed20aa19e9bddf95585cafeea7cc15cd
Comment 4 Akseli Lahtinen 2026-06-04 11:24:04 UTC
Git commit a2e427e14daec2c163966686b5a617ee2c99291a by Akseli Lahtinen.
Committed on 04/06/2026 at 11:02.
Pushed by akselmo into branch 'Plasma/6.7'.

BreezeStyle: Fix ViewItemDecoration/Indicator adjustment on RTL style

We were errorneously moving the rectangle to the left when
adjusting right side of it.

Instead move it to the right so we get the adjustment correctly.
Related: bug 518837
FIXED-IN: 6.7.0


(cherry picked from commit 0670226aed20aa19e9bddf95585cafeea7cc15cd)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +1    -1    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/-/commit/a2e427e14daec2c163966686b5a617ee2c99291a