BreezeStyle: Fix ViewItemDecoration/Indicator adjustment on RTL style

We were errorneously moving the rectangle to the left when
adjusting right side of it.

Instead move it to the right so we get the adjustment correctly.

BUG: 518835
BUG: 518837
FIXED-IN: 6.7.0